Added a button to view the original image

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="js/bootbox.min.js"></script>
   <script src="js/app.js"></script>
   
   <script>
@@ -138,10 +140,10 @@
            <!--    <i class="fa fa-chevron-circle-right fa-3x"></i>-->
                
            <!--</div>-->
-           <div class="col-md-7 col-md-offset-1 controls9">
+           <div class="col-md-8 controls9">
                
                <div class="row">
-               <!--<button type="button" class="btn btn-default">Save</button>-->
+               <button type="button" id = "original" class="btn btn-default">See the original image</button>
                <button id = "shuffle" type="button" class="btn btn-danger">Shuffle</button>
                <button id ="toggleGrid" type="button" class="btn btn-default active">Hide grid lines</button>
 
